log/build_2024-10-16_10-28-42/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 156
    thread_lidar = threading.Thread(target=target=executor.spin)
                                                 ^
SyntaxError: invalid syntax

